frontend/test/should_fail/index_of_wrong_type_where_index_expected.grg
#using "index_multiple_model.gm"

rule i() {
	if{ nodesFromIndex(Ei).size() > 0; }
	
	modify {
	}
}
